--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,14 +2,14 @@ version: '3'
 services:
   azure-vote-back:
     image: redis
-    container_name: azure-vote-back
+    container_name: azure-vote2-back
     ports:
         - "6379:6379"
 
   azure-vote-front:
     build: ./azure-vote
     image: azure-vote-front
-    container_name: azure-vote-front
+    container_name: azure-vote2-front
     environment:
       REDIS: azure-vote-back
     ports:
